src/objects/Ayudas_por_Compania__mdt.object
<CustomObject>
    <description>Representan las ayudas que se deben mostrar al gestor parametrizadas por Compañía para no incurrir en hardcodear directamente sobre el código</description>
    <fields>
        <fullName>AYC_SEL_Tipo_Ayuda__c</fullName>
        <description>Representa el tipo de ayuda</description>
        <label>Tipo de Ayuda</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Póliza No Identificada</fullName>
                    <default>true</default>
                    <label>Póliza No Identificada</label>
                </value>
                <value>
                    <fullName>Póliza No Pertenece a HomeServe</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>AYC_TXT_Codigo_Cia__c</fullName>
        <description>Representa el código identificador de la Compañía Aseguradora</description>
        <label>Código Compañía</label>
        <length>4</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AYC_TXT_Mensaje__c</fullName>
        <description>Representa el mensaje que se muestra en la ayuda al gestor</description>
        <label>Mensaje</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>AYC_TXT_Valor__c</fullName>
        <description>Representa el valor que se pasa para obtener el mensaje de la ayuda</description>
        <label>Valor</label>
        <type>Phone</type>
    </fields>
    <label>Ayudas por Compañía</label>
    <pluralLabel>Ayudas por Compañía</pluralLabel>
</CustomObject>